<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:text="@string/app_ResultProfit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtProfit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:text="@string/app_Empty"
        android:textAlignment="textStart"
        android:textColor="@color/background_purple"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:text="@string/app_ResultTotal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProfit" />

    <EditText
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:ems="10"
        android:inputType="textPersonName"
        android:enabled="false"
        android:paddingLeft="5sp"
        android:paddingTop="10sp"
        android:paddingRight="5sp"
        android:paddingBottom="10sp"
        android:text="@string/app_Empty"
        android:textAlignment="textStart"
        android:textColor="@color/background_purple"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnTakePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/app_BtnTakePic"
        android:textColor="#000000"
        android:textSize="20sp"
        android:onClick="getCam"
        app:backgroundTint="@color/WhiteGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="returnReply"/>

</androidx.constraintlayout.widget.ConstraintLayout>